[tool.poetry]
name = "spotify_download_bot"
version = "0.1.0"
description = ""
authors = ["Shayegan Hooshyari <sh.hooshyari@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "^13.4.1"
spotdl = "^3.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
