[tool.poetry]
name = "SL_Jana_Spotify_Download_Bot"
version = "0.1.0"
description = "Download Spotify Songs on Telegram"
authors = [<a href="https://t.me/SL_Jana_Team">"@SL_Jana_Team"</a>]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "^13.4.1"
spotdl = "^3.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
